text aligned to center

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>MyBlog</title>
+    <style>
+      body{text-align:center}
+    </style>
+  </head>
   <body> Welcome to my blog</body>
 </html>
