--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
   <head>
     <title>MyBlog</title>
-    <style>
-      body{text-align:center}
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body> Welcome to my blog</body>
+  <body> 
+    <main>
+      <h1>Welcome to MyBlog</h1>
+      <figure>
+        <img src="manideep.png" align="right" width="600" height="400">
+        <!--<figcaption>Manideep Ladi</figcaption>-->
+      </figure>
+      
+    </main>
+  </body>
 </html>
