--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <h1>
         Welcome!
     </h1>
-    <button class="tablink" onclick="openPage('blog',this)" id="defaultOpen">Blog</button>
+    <button class="tablink" onclick="openPage('home',this)" id="defaultOpen">Home</button>
     <button class="tablink" onclick="openPage('about_me',this)" >About me</button>
     <button class="tablink" onclick="openPage('contact_me',this)">Contact details</button>
     <button class="tablink" onclick="openPage('gallery',this)" >Gallery</button>
   <!-- create tab content-->
-    <div id="blog" class="tabcontent">
+    <div id="home" class="tabcontent">
         <h3>Ideas and their origin</h3>
 <!--        <img src="./manideep.png">-->
         <p> My name is Manideep Ladi. I completed my B.Tech in National Institute of Technology, Agartala.</p>
@@ -54,7 +54,7 @@
         <div class="row">
             <div class="column">
                 <img src="manideep.png">
-                <img src="images2.jpeg">
+                <img src="manideep.png">
             </div>
             <div class="column">
                 <img src="manideep.png">
