adding backgroundcolor and border to tabs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </h1>
     <button class="tablink" onclick="openPage('home',this)" id="defaultOpen">Home</button>
     <button class="tablink" onclick="openPage('about_me',this)" >About me</button>
-    <button class="tablink" onclick="openPage('contact_me',this)">Contact details</button>
+    <button class="tablink" onclick="openPage('contact_me',this)">Contact me  </button>
     <button class="tablink" onclick="openPage('gallery',this)" >Gallery</button>
   <!-- create tab content-->
     <div id="home" class="tabcontent">
