Adding info to About me page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,21 @@
     </div>
     <div id="about_me" class="tabcontent">
         <h3>About me</h3>
-        <p><img src="manideep.png" id="aboutMeImg">My name is Manideep Ladi. I completed my B.Tech in National Institute of Technology, Agartala.</p>
+        <p><img src="manideep.png" id="aboutMeImg"> Myself <strong>Manideep Ladi </strong> currently working in Zemoso Labs as Software engineer.</p>
+        <h4>Technical Abilites & Skills</h4>
+        <p>
+          <ul>
+            <li>Working knowledge of Java, Html, Css, Javascript, C, C++, Python, Sql.</li>
+            <li>Working knowledge of different repositories like Github,BitBucket,Svn.</li>
+            <li>Through understanding of subjects like DataStructure, Operating Systems, Computer Architecture</li>
+            <li>Also had good theoritical knowledge on DataScience.</li>
+
+          </ul>
+        </p>
+        <h4>Professional Experience</h4>
+        <p>I worked in <strong>ADP Pvt LTD</strong> as Java developer for 25 months. In ADP I was part of architect team for HR & Payroll product called Enterprise. </p>
+        <h4>Personal details</h4>
+        <p></p>
     </div>
     <div id="contact_me" class="tabcontent">
         <h3>Fill the form to get in touch with me!</h3>
