Adding info to About me page

--- a/index.html
+++ b/index.html
@@ -24,19 +24,29 @@
     </div>
     <div id="about_me" class="tabcontent">
         <h3>About me</h3>
-        <p><img src="manideep.png" id="aboutMeImg"> Myself <strong>Manideep Ladi </strong> currently working in Zemoso Labs as Software engineer.</p>
+        <h4>Introduction</h4>
+        <p class="indentation"><img src="manideep.png" id="aboutMeImg"> Myself <strong>Manideep Ladi </strong> currently working in <strong>Zemoso Technologies</strong> as Software engineer.</p>
         <h4>Technical Abilites & Skills</h4>
         <p>
           <ul>
             <li>Working knowledge of Java, Html, Css, Javascript, C, C++, Python, Sql.</li>
             <li>Working knowledge of different repositories like Github,BitBucket,Svn.</li>
-            <li>Through understanding of subjects like DataStructure, Operating Systems, Computer Architecture</li>
+            <li>Through understanding of subjects like DataStructure, Operating Systems, Computer Architecture.</li>
             <li>Also had good theoritical knowledge on DataScience.</li>
 
           </ul>
         </p>
         <h4>Professional Experience</h4>
-        <p>I worked in <strong>ADP Pvt LTD</strong> as Java developer for 25 months. In ADP I was part of architect team for HR & Payroll product called Enterprise. </p>
+        <p class="indentation"> I worked in <strong>ADP Pvt LTD</strong> as Java developer for 25 months. In ADP I was part of architect team for HR & Payroll product called Enterprise.
+            <h5 class="indentation1em">Key Accomplishments</h5>
+            <p>
+              <ul>
+                <li>Designed, implemented and integrated fraud prevention feature in the product to provide 2-factor Authentication service to the clients.</li>
+                <li>Analyzed and implemented SingleCore project for multiple versions of product to make product versionless which helps us in maintaining and developing new features.</li>
+                <li>Debugging and fixing several production defects.</li>
+              </ul>
+            </p>
+        </p>
         <h4>Personal details</h4>
         <p></p>
     </div>
