--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <h3>Fill the form to get in touch with me!</h3>
         <div class="container">
             <form action="https://formsubmit.co/3c59de90fa61504515d96cc831b3f69b" method="POST">
+                <input type="hidden" name="_next" value="https://manideepladi.github.io/MyBlog/thanks.html">
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
 
