--- a/thanks.html
+++ b/thanks.html
@@ -10,18 +10,7 @@
         </div>
         <h1>Thank You!</h1>
     </div>
-    <div class="_body">
-        <div class="_box">
-            <h2>
-                <strong>Please check your email</strong> for further instructions on how to complete your account setup.
-            </h2>
-            <p>
-                Thanks a bunch for filling that out. It means a lot to us, just like you do! We really appreciate you giving us a moment of your time today. Thanks for being you.
-            </p>
-        </div>
-    </div>
     <div class="_footer">
-        <p>Having trouble? <a href="">Contact us</a> </p>
-        <a class="btn" href="https://manideepladi.github.io/MyBlog">Back to homepage</a>
+        <a class="btn" href="http://manideepladi.github.io/">Back to homepage</a>
     </div>
 </div>
